--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pypdf==4.0.0
-PyPDF2==3.0.1
-pandas==2.2.0
-chromadb==0.4.22
-google-generativeai==0.3.2
-python-dotenv~=1.0.1
+pypdf
+pandas
+chromadb
+google-generativeai
+python-dotenv
